# pdagent

./: .claudeignore  .env.dev  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.de.md  README.es.md  README.fr.md  README.ja.md  README.ko.md  README.md  README.pt-BR.md  README.ru.md  README.tr.md  README.uk.md  README.zh-CN.md  SECURITY.md  pyproject.toml  requirements.txt  setup.bat  setup.sh
.github/workflows/: publish-release.yml  publish.yml
docs/: ANTIGRAVITY_LOGIN_IMPLEMENTATION.md  AUTHENTICATION_REQUIREMENTS.md  BUILD_WORKFLOW.md  COMMANDS.md  LOCAL_DEVELOPMENT.md  MOBILE_AUTHENTICATION.md  REMOTE.md  dropbox-setup.md
graphify-out/: .graphify_python  GRAPH_REPORT.md  graph.html  graph.json
pocket_desk_agent/: __init__.py  antigravity_auth.py  app_catalog.py  app_control.py  app_paths.py  auth.py  automation_utils.py  cli.py  command_map.py  command_registry.py  config.py  configure.py  constants.py  desktop_adapters.py  file_manager.py  gemini_actions.py  gemini_cli_auth.py  gemini_client.py  main.py  rate_limiter.py  recipe_registry.py  scheduler_registry.py  scheduling_utils.py  startup_manager.py  telegram_commands.py  updater.py  window_utils.py
pocket_desk_agent/handlers/: __init__.py  _shared.py  antigravity.py  auth.py  automation.py  build.py  callbacks.py  claude.py  core.py  custom_commands.py  filesystem.py  remote.py  scheduling.py  system.py  workflow_recipes.py
pocket_desk_agent/remote/: __init__.py  capture.py  input_bridge.py  install.py  session.py  tunnel.py  web_server.py
scripts/: __init__.py  install.ps1  manage_auth.py  manage_service.py
tests/: test_automation_utils.py  test_gemini_tool_normalization.py  test_remote_tunnel.py
